--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
-title:            Balzac
-tagline:          A beautiful theme.
-description:      Describe your website.
+title:            Life Cycles
+tagline:          life cycles
+description:      life cycles.
 #Comment out url when working locally to resolve base urls correctly
-url: http://jekyll.gtat.me
+url: http://omoway.github.io
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
-  avatar:         avatar.png
-  bio:            "Aesthete & Athlete"
-  email:          cole@coletownsend.com
-  twitter:        ctrunsthis        
-  github:         coletownsend       
-  instagram:      ctrunsthis     
-  dribbble:       coletownsend
-  disqus:         balzac
+  name:           omOway 
+#  avatar:         avatar.png
+#  bio:            "Aesthete & Athlete"
+  email:          qingxian.yan@upai.com
+  twitter:        Yousri
+  github:         omoway
+  instagram:      imyousri
+#  dribbble:       
+  disqus:         life-cycles
   # Plug in your disqus shortname!
   
 
@@ -23,12 +23,12 @@ owner:
 links:
   - title: About
     url: /about
-  - title: Github
+#  - title: Github
     url: https://github.com/ColeTownsend/Balzac-for-Jekyll
-    external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
-    external: true
+#    external: true
+#  - title: Cole Who?
+#    url: http://coletownsend.com
+#    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
@@ -51,7 +51,7 @@ kramdown:
     coderay_css: class
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title
+permalink:   /:categories/:year/:month/:title
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp"]
