--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ links:
   - title: About
     url: /about
 #  - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
+#    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
 #    external: true
 #  - title: Cole Who?
 #    url: http://coletownsend.com
