--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@ title:            Life Cycles
 tagline:          life cycles
 description:      life cycles.
 #Comment out url when working locally to resolve base urls correctly
-url: http://omoway.github.io
+url: http://omoway.github.com
 
 # Owner/author information
 owner:
-  name:           omOway 
+  name:           omoway 
 #  avatar:         avatar.png
 #  bio:            "Aesthete & Athlete"
   email:          qingxian.yan@upai.com
@@ -14,7 +14,7 @@ owner:
   github:         omoway
   instagram:      imyousri
 #  dribbble:       
-  disqus:         life-cycles
+#  disqus:         life-cycles
   # Plug in your disqus shortname!
   
 
