--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Life Cycles
-tagline:          life cycles
-description:      life cycles.
+#tagline:          life cycles
+#description:      life cycles.
 #Comment out url when working locally to resolve base urls correctly
 url: http://omoway.github.com
 
@@ -10,9 +10,9 @@ owner:
 #  avatar:         avatar.png
 #  bio:            "Aesthete & Athlete"
   email:          qingxian.yan@upai.com
-  twitter:        Yousri
-  github:         omoway
-  instagram:      imyousri
+#  twitter:        Yousri
+#  github:         omoway
+#  instagram:      imyousri
 #  dribbble:       
 #  disqus:         life-cycles
   # Plug in your disqus shortname!
