--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Life Cycles
-#tagline:          life cycles
-#description:      life cycles.
+tagline:          life cycles
+description:      life cycles.
 #Comment out url when working locally to resolve base urls correctly
 url: http://omoway.github.com
 
@@ -10,11 +10,11 @@ owner:
 #  avatar:         avatar.png
 #  bio:            "Aesthete & Athlete"
   email:          qingxian.yan@upai.com
-#  twitter:        Yousri
-#  github:         omoway
-#  instagram:      imyousri
+  twitter:        Yousri
+  github:         omoway
+  instagram:      imyousri
 #  dribbble:       
-#  disqus:         life-cycles
+  disqus:         life-cycles
   # Plug in your disqus shortname!
   
 
@@ -51,7 +51,7 @@ kramdown:
     coderay_css: class
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:year/:month/:title
+permalink:   /:categories/:title
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp"]
