--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ owner:
 #  bio:            "Aesthete & Athlete"
   email:          qingxian.yan@upai.com
   twitter:        Yousri
+  weibo:          omoway
   github:         omoway
   instagram:      imyousri
 #  dribbble:       
