--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Life Cycles
 tagline:          life cycles
 description:      life cycles.
 #Comment out url when working locally to resolve base urls correctly
-url: http://omoway.github.com
+url: http://omoway.github.io
 
 # Owner/author information
 owner:
